<resources>
    <string name="app_name">prova3</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="startGame">Start Game</string>
    <string name="login">Login</string>
    <string name="rules">Rules</string>
    <string name="wins">Wins:</string>
    <string name="welcome">Here you are,</string>
    <string name="credits">Credits</string>
    <string name="logout">Logout</string>
    <string name="title" translatable="false">Tic Tac Toe</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="register">Register</string>
    <string name="username" translatable="false">Username</string>
    <string name="turn">Turn</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="single_player">Single Player</string>
    <string name="game_mode">Game Mode</string>
    <string name="online_game">Online Game</string>
    <string name="offline_game">Local Mode</string>
    <string name="settings">settings</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="enter_game_code">Enter Game Code</string>
    <string name="dontGoBack">Please don\'t go back</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="dbError">Database Error</string>
    <string name="enter_valid_code">Please enter a valid code</string>
    <string name="sec_timer">10 sec timer started</string>
    <string name="scared">They are too scared to join</string>
    <string name="opponent_fled">Your opponent has fled</string>
    <string name="game_over" translatable="false">Game Over</string>
    <string name="play_again">Start a new game?</string>
    <string name="draw">It\'s a draw</string>
    <string name="ok" translatable="false">OK</string>
    <string name="player2_win">Player 2 Wins</string>
    <string name="player1_win">Player 1 Wins</string>
    <string name="error_get_data">Something went wrong getting data</string>
    <string name="email_req">Email required</string>
    <string name="inv_email">Email not valid</string>
    <string name="pwd_req">Password required</string>
    <string name="inv_pass">Password should be at least 6 characters</string>
    <string name="success">Success</string>
    <string name="fail_log">Failed to login</string>
    <string name="username_req">Username required</string>
    <string name="reg_success">User has been registered</string>
    <string name="reg_fail">Failed to register</string>
    <string name="time_out">Time out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="rules_2">You are X, the enemy is O. Players take turns putting their marks in empty squares.</string>
    <string name="rules_1">The game is played on a grid 3x3 squares.</string>
    <string name="rules_3">The first player to get 3 of her marks in a row (up, down, across, or diagonally) is the winner.</string>
    <string name="rules_4">When all 9 squares are full, the game is over. If no player has 3 marks in a row, the game ends in a tie.</string>
    <string name="example">Example</string>
    <string name="rules_5">Online Mode:</string>
    <string name="rules_6">Create a code and share it with your friend</string>
    <string name="rules_7">If none joins in 10 s, the lobby will disappear and it will be needed a new code</string>
    <string name="rules_8">Maximum duration of every game is 1 min</string>
    <string name="rulesHead">Rules:</string>
    <string name="play">Let\'s play</string>
</resources>