<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/idTVPlayer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/player1"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/idTVPlayer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/player2"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/idBtnBox1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textSize="60sp" />

        <Button
            android:id="@+id/idBtnBox2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textSize="60sp" />

        <Button
            android:id="@+id/idBtnBox3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textColor="#000000"
            android:textSize="60sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/idBtnBox4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/idBtnBox5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/idBtnBox6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textColor="#000000"
            android:textSize="60sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/idBtnBox7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/idBtnBox8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/idBtnBox9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:onClick="buttonClick"
            android:textColor="#000000"
            android:textSize="60sp" />

    </TableRow>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/idBtnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>


</TableLayout>